fix small button text alignment

--- a/src/core/_Button.scss
+++ b/src/core/_Button.scss
@@ -100,7 +100,7 @@ input[type="submit"] {
   &.button--small {
     font-size: 0.8rem;
     height: 2.8rem;
-    line-height: 2.8rem;
+    line-height: 2.6rem;
     padding: 0 1.5rem;
   }
 
